# EyeVideoProcess

./: README.md
EVPCore/: CMakeLists.txt
EVPCore/3rdpart/mac/ffmpeg-4.1.4/lib/: libavdevice.58.5.100.dylib  libavfilter.7.40.101.dylib  libavformat.58.20.100.dylib  libavutil.56.22.100.dylib  libpostproc.55.3.100.dylib  libswresample.3.3.100.dylib  libswscale.5.3.100.dylib
EVPCore/3rdpart/mac/ffmpeg-4.1.4/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
EVPCore/3rdpart/mac/x264/lib/: libx264.157.dylib
EVPCore/3rdpart/mac/x264/lib/pkgconfig/: x264.pc
EVPCore/EVPMain/: CMakeLists.txt  VideoTest1.cpp
